--- a/views/index.jade
+++ b/views/index.jade
@@ -17,6 +17,7 @@ html(lang='en')
         script(type='text/javascript' src='/js/sh/shBrushPlain.js')
         script(type='text/javascript' src='/js/sh/shBrushXml.js')
         script(type='text/javascript').
+            alert(1);
             SyntaxHighlighter.all();
             
             $(window).scroll(handleScroll);
