--- a/public/css/code_component.css
+++ b/public/css/code_component.css
@@ -1,6 +1,85 @@
 .spt_bg{background:url('http://image.adidas.co.kr/images/adidas/common/adidas_spirite.png?v=170217') 0 0 no-repeat;display:block;}
 .clfix:after {content:"."; display:block; height:0; font-size:0; clear:both; visibility:hidden;}
 
+/* 모달팝업 */
+#wrap #contents .modal-popup-wrapper{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index:701;
+	overflow: auto;
+	display: none;
+}
+
+#wrap #contents .modal-popup-wrapper.open{
+	display: block;
+}
+
+#wrap #contents .modal-popup-wrapper>.overlay{
+	width: 100%;
+	height: 100%;
+	z-index:700;
+	background: #000;
+	opacity: 0.7;
+	-ms-filter: alpha(opacity=70);
+	filter: alpha(opacity=70);
+	position: fixed;
+	top: 0;
+	left:0;
+}
+
+#wrap #contents .modal-popup-wrapper>.popup{
+	position:absolute;
+	top: 50px;
+	left: 50%;
+	background: #fff;
+	z-index: 701;
+}
+
+#wrap #contents .modal-popup-wrapper>.popup .popup-header{
+	padding: 27px 30px;
+	background: #fff;
+	border: 1px solid  #ebebeb;
+}
+
+#wrap #contents .modal-popup-wrapper>.popup .popup-header h2{
+	font:500 27px/27px 'noto sans kr';
+	letter-spacing: -0.5px;
+	color: #000;
+	margin-bottom: 0;
+    padding-bottom: 0;
+    border-bottom: 0px solid #eaecef;
+
+}
+
+.ie7 .modal-popup-wrapper>.popup .popup-header h2,
+.ie8 .modal-popup-wrapper>.popup .popup-header h2{
+	font-weight: bold;
+}
+
+#wrap #contents .modal-popup-wrapper>.popup .popup-header>.close{
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	top:12px;
+	right:15px;
+}
+
+#wrap #contents .modal-popup-wrapper>.popup .popup-header>.close span{
+	width: 18px;
+	height: 18px;
+	margin: 16px;
+	background-position: -100px -685px;
+}
+
+#wrap #contents .modal-popup-wrapper>.popup .popup-contents{
+	padding: 30px 30px 40px;
+	background: #fff;
+}
+
+
 /* 아디다스 웹 버튼 */
 .btn-ctm{
 	height: 46px;
