--- a/public/css/code_component.css
+++ b/public/css/code_component.css
@@ -1,6 +1,29 @@
 .spt_bg{background:url('http://image.adidas.co.kr/images/adidas/common/adidas_spirite.png?v=170217') 0 0 no-repeat;display:block;}
 .clfix:after {content:"."; display:block; height:0; font-size:0; clear:both; visibility:hidden;}
 
+/*  close button */
+.close_x_btn::after,
+.close_x_btn::before{
+	content:'';
+	width:50%;
+	height: 1px;
+	position: absolute;
+	top:50%;
+	left:50%;
+	transform:translate3d(-50%,-50%,0) rotate(45deg);
+	-webkit-transform:translate3d(-50%,-50%,0) rotate(45deg);
+	background: #000;
+}
+
+.close_x_btn.white::after,
+.close_x_btn.white::before{
+	background: #fff;
+}
+.close_x_btn::after{
+	transform:translate3d(-50%,-50%,0) rotate(-45deg);
+	-webkit-transform:translate3d(-50%,-50%,0) rotate(-45deg);
+}
+
 /* 모달팝업 */
 #wrap #contents .modal-popup-wrapper{
 	position: fixed;
@@ -480,6 +503,84 @@
 
 .classname-list li .code{
 	margin-top: 10px;
+}
+
+
+
+
+
+
+#wrap #contents .adi_mo .modal-popup-wrapper{
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    overflow: auto;
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper.open{
+    display: block;
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper>.overlay{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 5;
+    opacity:0;
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper>.popup{
+    width: 100%;
+    background: #fff;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    opacity:0;
+    transition:opacity 0.4s;
+    -webkit-transition:opacity 0.4s;
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper.open>.overlay{
+    opacity: 1;
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper.open>.popup{
+    opacity: 1;
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper>.popup>.popup-header{
+	padding: 0;
+    position: relative;
+    background: #ebebeb;
+}
+#wrap #contents .adi_mo .modal-popup-wrapper>.popup>.popup-header h2{
+    padding-left: 12px;
+    height: 60px;
+    font:700 1.5rem/60px 'noto sans kr';
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper>.popup>.popup-header .close_x_btn {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 50%;
+    right: 15px;
+    transform: translate3d(0,-50%,0);
+    -webkit-transform: translate3d(0,-50%,0);
+    right: 1.2rem;
+}
+
+#wrap #contents .adi_mo .modal-popup-wrapper>.popup>.popup-contents{
+    position: relative;
+    padding: 1.2rem;
 }
 
 .campaign-content{width:100%;min-width:1200px;overflow:hidden}.campaign-content .statement{width:100%;height:100%;position:relative;overflow:hidden}.campaign-content .statement .statement-bg{width:100%;background-position:0 0;background-repeat:no-repeat;background-size:cover;-webkit-background-size:cover}.campaign-content .statement .statement-bg img{width:100%;height:100%;object-fit:cover;-webkit-object-fit:cover;-moz-object-fit:cover;-o-object-fit:cover;-ms-object-fit:cover}.campaign-content .statement .statement-inner{width:100%;position:absolute;top:50%;left:0;transform:translate3d(0, -50%, 0);-webkit-transform:translate3d(0, -50%, 0);-moz-transform:translate3d(0, -50%, 0);-o-transform:translate3d(0, -50%, 0);-ms-transform:translate3d(0, -50%, 0)}.campaign-content .statement .statement-inner .copy{width:100%;color:#fff;text-align:center}.campaign-content .statement .statement-inner .copy>*{width:100%;text-align:center;font:15px 'NotoSansKRRegular','Nanum Gothic'}.campaign-content .statement .statement-inner .copy>*.closing{margin-top:50px}.campaign-content .image-grids{width:100%;position:relative}.campaign-content .image-grids .fix{width:25%;position:absolute;top:0;left:0;overflow:hidden;perspective:500px;-webkit-perspective:500px;-moz-perspective:500px;-o-perspective:500px;-ms-perspective:500px}.campaign-content .image-grids .fix img{width:100%;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0);-moz-transform:translate3d(0, 0, 0);-o-transform:translate3d(0, 0, 0);-ms-transform:translate3d(0, 0, 0);transition-duration:3s;-webkit-transition-duration:3s;-moz-transition-duration:3s;-o-transition-duration:3s;-ms-transition-duration:3s}.campaign-content .image-grids .fix:hover img{transition-duration:10s;-webkit-transition-duration:10s;-moz-transition-duration:10s;-o-transition-duration:10s;-ms-transition-duration:10s;transform:translate3d(0, 0, 100px);-webkit-transform:translate3d(0, 0, 100px);-moz-transform:translate3d(0, 0, 100px);-o-transform:translate3d(0, 0, 100px);-ms-transform:translate3d(0, 0, 100px)}.campaign-content .image-grids .image-grid{width:100%;position:relative;left:25%}.campaign-content .image-grids .image-grid .col>div{overflow:hidden;perspective:500px;-webkit-perspective:500px;-moz-perspective:500px;-o-perspective:500px;-ms-perspective:500px}.campaign-content .image-grids .image-grid .col>div img{width:100%;transform:translate3d(0, 0, 0);-webkit-transform:translate3d(0, 0, 0);-moz-transform:translate3d(0, 0, 0);-o-transform:translate3d(0, 0, 0);-ms-transform:translate3d(0, 0, 0);transition-duration:3s;-webkit-transition-duration:3s;-moz-transition-duration:3s;-o-transition-duration:3s;-ms-transition-duration:3s}.campaign-content .image-grids .image-grid .col>div:hover img{transition-duration:10s;-webkit-transition-duration:10s;-moz-transition-duration:10s;-o-transition-duration:10s;-ms-transition-duration:10s;transform:translate3d(0, 0, 100px);-webkit-transform:translate3d(0, 0, 100px);-moz-transform:translate3d(0, 0, 100px);-o-transform:translate3d(0, 0, 100px);-ms-transform:translate3d(0, 0, 100px)}.campaign-content .image-grids .image-grid .col .img1-3{width:25%;position:relative;float:left}.campaign-content .image-grids .image-grid .col .img2-3{width:50%;padding-bottom:25%;position:relative;float:left;background:url(http://image.adidas.co.kr/images/adidas/event/xbyo/img-grid_horiz-1_tcm65-116510.jpg) center center no-repeat;background-size:cover;-webkit-background-size:cover}.campaign-content .slider-type1{width:100%;position:relative;overflow:hidden;background:url("/images/adidas/event/sports17/slider_bg.jpg");background-size:cover;-webkit-background-size:cover}.campaign-content .slider-type1 .slider_wrap{margin:0 auto;width:950px}.campaign-content .slider-type1 .slider_wrap ul{width:10000%;position:relative}.campaign-content .slider-type1 .slider_wrap ul li{width:950px;float:left;margin-right:250px}.campaign-content .slider-type1 .slider_wrap ul li .title{padding:76px 0 54px 0;text-align:center}.campaign-content .slider-type1 .slider_wrap ul li .title p{text-transform:uppercase;text-align:center;font:40px/45px 'adinenuPro-black';color:#000}.campaign-content .slider-type1 .slider_wrap ul li .title span{font:26px/28px 'NotoSansKRRegular';color:#000}.campaign-content .slider-type1 .slider_wrap ul li img{width:100%}.campaign-content .slider-type1 .slider_wrap .next,.campaign-content .slider-type1 .slider_wrap .prev{width:33px;height:64px;position:absolute;top:50%;margin-top:-32px}.campaign-content .slider-type1 .slider_wrap .next{right:50%;margin-right:-570px;overflow:hidden;opacity:.5;filter:alpha(opacity=50);-ms-filter:alpha(opacity=50);transition:right 0.4s ease-out 0.1s;-webkit-transition:right 0.4s ease-out 0.1s;-moz-transition:right 0.4s ease-out 0.1s;-o-transition:right 0.4s ease-out 0.1s;-ms-transition:right 0.4s ease-out 0.1s}.campaign-content .slider-type1 .slider_wrap .next img{position:relative;-webkit-animation-delay:0;-webkit-animation-duration:2s;-webkit-animation-name:arrow2;-webkit-animation-fill-mode:forwards;-webkit-animation-iteration-count:infinite;-moz-animation-delay:0;-moz-animation-duration:2s;-moz-animation-name:arrow2;-moz-animation-fill-mode:forwards;-moz-animation-iteration-count:infinite;-o-animation-delay:0;-o-animation-duration:2s;-o-animation-name:arrow2;-o-animation-fill-mode:forwards;-o-animation-iteration-count:infinite;animation-delay:0;animation-duration:2s;animation-name:arrow2;animation-fill-mode:forwards;animation-iteration-count:infinite}.campaign-content .slider-type1 .slider_wrap .prev{left:50%;margin-left:-570px;overflow:hidden;opacity:.5;filter:alpha(opacity=50);-ms-filter:alpha(opacity=50);transition:left 0.4s ease-out 0.1s;-webkit-transition:left 0.4s ease-out 0.1s;-moz-transition:left 0.4s ease-out 0.1s;-o-transition:left 0.4s ease-out 0.1s;-ms-transition:left 0.4s ease-out 0.1s}.campaign-content .slider-type1 .slider_wrap .prev img{position:relative;-webkit-animation-delay:0;-webkit-animation-duration:2s;-webkit-animation-name:arrow;-webkit-animation-fill-mode:forwards;-webkit-animation-iteration-count:infinite;-moz-animation-delay:0;-moz-animation-duration:2s;-moz-animation-name:arrow;-moz-animation-fill-mode:forwards;-moz-animation-iteration-count:infinite;-o-animation-delay:0;-o-animation-duration:2s;-o-animation-name:arrow;-o-animation-fill-mode:forwards;-o-animation-iteration-count:infinite;animation-delay:0;animation-duration:2s;animation-name:arrow;animation-fill-mode:forwards;animation-iteration-count:infinite}.campaign-content .slider-type1 .num_wrap{position:relative;width:950px;height:45px;margin:75px auto}.campaign-content .slider-type1 .num_wrap .num{position:absolute;left:0;width:10000%}.campaign-content .slider-type1 .num_wrap .num a{position:relative;top:0;width:320px;display:inline-block;text-align:center;font:24px/30px 'NotoSansKRRegular','Nanum Gothic';color:#000;vertical-align:middle}.campaign-content .slider-type1 .num_wrap .num a span{position:relative;display:inline-block;overflow:hidden;height:45px;line-height:35px}.campaign-content .slider-type1 .num_wrap .num a.on{position:relative;font-family:'NotoSansKRBold','Nanum Gothic';overflow:hidden}.campaign-content .slider-type1 .num_wrap .num a.on span::after{content:'';position:absolute;bottom:0px;left:0;display:inline-block;width:100%;background:#000;height:3px;margin-top:15px;overflow:hidden}.campaign-content.parallax .statement .statement-inner .copy>*{margin-top:10px}.campaign-content.parallax .statement .statement-inner .copy>*.closing{margin-top:10px}.campaign-content.parallax .statement.loaded .statement-inner .copy>*{opacity:1;margin-top:0;transition:margin-top 0.3s,opacity 0.3s;-webkit-transition:margin-top 0.3s,opacity 0.3s;-moz-transition:margin-top 0.3s,opacity 0.3s;-o-transition:margin-top 0.3s,opacity 0.3s;-ms-transition:margin-top 0.3s,opacity 0.3s}.campaign-content.parallax .statement.loaded .statement-inner .copy>*.closing{opacity:1;margin:0;transition-delay:0.1s;-webkit-transition-delay:0.1s;-moz-transition-delay:0.1s;-o-transition-delay:0.1s;-ms-transition-delay:0.1s}.campaign-content.parallax .statement .statement-inner{width:100%;position:absolute;top:100px;left:0}.campaign-content.parallax .statement .statement-inner .copy{width:100%;color:#fff;text-align:center}.campaign-content.parallax .statement .statement-inner .copy>*{width:100%;text-align:center;font:15px 'NotoSansKRRegular','Nanum Gothic'}.campaign-content.parallax .statement .statement-inner .copy>*.closing{margin-top:50px}.campaign-content.parallax .image-grids.loaded .igrid2{transition-delay:0.2s;-webkit-transition-delay:0.2s;-moz-transition-delay:0.2s;-o-transition-delay:0.2s;-ms-transition-delay:0.2s}.campaign-content.parallax .image-grids.loaded .igrid3{transition-delay:0.3s;-webkit-transition-delay:0.3s;-moz-transition-delay:0.3s;-o-transition-delay:0.3s;-ms-transition-delay:0.3s}.campaign-content.parallax .image-grids.loaded .igrid4{transition-delay:0.4s;-webkit-transition-delay:0.4s;-moz-transition-delay:0.4s;-o-transition-delay:0.4s;-ms-transition-delay:0.4s}.campaign-content.parallax .image-grids.loaded .igrid5{transition-delay:0.5s;-webkit-transition-delay:0.5s;-moz-transition-delay:0.5s;-o-transition-delay:0.5s;-ms-transition-delay:0.5s}.campaign-content.parallax .image-grids.loaded .igrid6{transition-delay:0.6s;-webkit-transition-delay:0.6s;-moz-transition-delay:0.6s;-o-transition-delay:0.6s;-ms-transition-delay:0.6s}.campaign-content.parallax .image-grids.loaded .fix{opacity:1;transition:opacity 0.3s;-webkit-transition:opacity 0.3s;-moz-transition:opacity 0.3s;-o-transition:opacity 0.3s;-ms-transition:opacity 0.3s}.campaign-content.parallax .image-grids.loaded .image-grid .col>div{opacity:1;transition:opacity 0.3s;-webkit-transition:opacity 0.3s;-moz-transition:opacity 0.3s;-o-transition:opacity 0.3s;-ms-transition:opacity 0.3s}.campaign-content.parallax .image-grids .fix{opacity:0}.campaign-content.parallax .image-grids .fix.loaded{opacity:1}.campaign-content.parallax .image-grids .image-grid .col>div{opacity:0}.campaign-content.parallax .image-grids .image-grid .col>div.loaded{opacity:1}@-webkit-keyframes arrow{0%{left:100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:-110%}}@-moz-keyframes arrow{0%{left:100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:-110%}}@-o-keyframes arrow{0%{left:100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:-110%}}@keyframes arrow{0%{left:100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:-110%}}@-webkit-keyframes arrow2{0%{left:-100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:110%}}@-moz-keyframes arrow2{0%{left:-100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:110%}}@-o-keyframes arrow2{0%{left:-100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:110%}}@keyframes arrow2{0%{left:-100%}25%{left:0%}50%{left:0%}75%{left:0%}100%{left:110%}}
