--- a/public/css/code_component.css
+++ b/public/css/code_component.css
@@ -771,35 +771,55 @@
 	opacity: 1;
 }
 
-/* button with shadow */
+
+/* 메인리뉴얼 btn 수정 start */
 .button_area_v2 div{position: relative;}
-.button_area_v2 div div.bg{
-	display: block;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	transform: translate(3px,3px);
-	-webkit-transform: translate(3px,3px);
-	box-shadow: inset 0 0 0 1px #000;
-	-webkit-box-shadow: inset 0 0 0 1px #000;
-}
-.button_area_v2 div.white div.bg{
-	box-shadow: inset 0 0 0 1px #fff;
-	-webkit-box-shadow: inset 0 0 0 1px #fff;
-}
 .button_area_v2 div a{
 	position: relative;
-	display: block;
+	display: inline-block;
     text-align: center;
     height: 50px;
     font: 500 15px/49px 'NotoSansKR';
     color: #fff;
     background: #000;
 	z-index: 2;
+	padding: 0 20px;
+}
+.button_area_v2 div a::after{
+	content:'';
+	clear:both;
+	display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translate(3px,3px);
+    -webkit-transform: translate(3px,3px);
+    box-shadow: inset 0 0 0 1px #000;
+    -webkit-box-shadow: inset 0 0 0 1px #000;
+}
+.button_area_v2 div a span.arrow em.top{top:-3px;}
+.button_area_v2 div a span.arrow em.bottom{bottom: -3px;transform: rotate(-45deg);-webkit-transform: rotate(-45deg);}
+.button_area_v2 div a:hover{
+	color:#767677;
+}
+.button_area_v2 div a:hover .arrow,
+.button_area_v2 div a:hover .arrow .top,
+.button_area_v2 div a:hover .arrow .bottom{
+	background: #767677;
+}
+/* btn white 버전 start */
+.button_area_v2 div.white a::after{
+    box-shadow: inset 0 0 0 1px #fff;
+    -webkit-box-shadow: inset 0 0 0 1px #fff;
 }
 .button_area_v2 div.white a{color: #000;background: #fff;}
+.button_area_v2 div.white a span.arrow{background: #000;}
+.button_area_v2 div.white a span.arrow em{background: #000;}
+/* btn white 버전 end */
+
+
 .button_area_v2 div a span.arrow{
 	position: relative;
 	top:-1px;
@@ -810,7 +830,7 @@
     background: #fff;
     vertical-align: middle;
 }
-.button_area_v2 div.white a span.arrow{background: #000;}
+
 .button_area_v2 div a span.arrow em{
 	position: absolute;
     right: 0;
@@ -820,9 +840,6 @@
     transform: rotate(45deg);
     -webkit-transform: rotate(45deg);
 }
-.button_area_v2 div.white a span.arrow em{background: #000;}
-.button_area_v2 div a span.arrow em.top{top:-3px;}
-.button_area_v2 div a span.arrow em.bottom{bottom: -3px;transform: rotate(-45deg);-webkit-transform: rotate(-45deg);}
 .ie8 .button_area_v2 div a span.arrow em.top{
 	top:-5px;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=-0.70710678, M21=0.70710678, M22=0.70710678,sizingMethod='auto expand')";
@@ -833,3 +850,5 @@
 	-ms-filter: "progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=0.70710678, M21=-0.70710678, M22=0.70710678,sizingMethod='auto expand')";
 	filter: progid:DXImageTransform.Microsoft.Matrix(M11=0.70710678, M12=0.70710678, M21=-0.70710678, M22=0.70710678,sizingMethod='auto expand');
 }
+
+/* 메인리뉴얼 btn 수정 end */
